# Strummer

./: .gitignore  CLAUDE.md  CREDITS.md  PRIVACY.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/audio/: GuitarEngine.cpp  GuitarEngine.h  KarplusStrong.h  RingBuffer.h
app/src/main/java/geo/strummer/: MainActivity.kt  StrummerApp.kt
app/src/main/java/geo/strummer/data/audio/: GuitarEngineBridge.kt  NativeGuitarEngine.kt  WavFileWriter.kt
app/src/main/java/geo/strummer/data/billing/: StubEntitlementRepository.kt
app/src/main/java/geo/strummer/data/palette/: PaletteDao.kt  PaletteRepository.kt  SavedPaletteEntity.kt  StrummerDatabase.kt
app/src/main/java/geo/strummer/data/prefs/: OnboardingPrefs.kt
app/src/main/java/geo/strummer/di/: AudioModule.kt  DataModule.kt
app/src/main/java/geo/strummer/domain/audio/: AudioDiagnostics.kt  GuitarEngine.kt
app/src/main/java/geo/strummer/domain/billing/: EntitlementRepository.kt
app/src/main/java/geo/strummer/domain/guitar/: ChordLibrary.kt  PatternLibrary.kt  StrumEngine.kt
app/src/main/java/geo/strummer/player/: GuitarSession.kt
app/src/main/java/geo/strummer/presentation/common/: CommonUi.kt
app/src/main/java/geo/strummer/presentation/fretboard/: FretboardScreen.kt  FretboardViewModel.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
(+27 files in other folders)
